--- a/src/components/loading.scss
+++ b/src/components/loading.scss
@@ -1,27 +1,12 @@
-.modal {
-  position: fixed;
-  width: 700px;
-  height: 100%;
-  z-index: 1;
-  left: 50%;
-  transform: translateX(-50%);
-  top: 0;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.24);
-  animation-name: fadeIn;
-  animation-duration: 500ms;
-  -webkit-animation-name: fadeIn;
-  -webkit-animation-duration: 500ms;
-}
 .loading {
   position: fixed;
-  bottom: 10px;
+  top: 10px;
   left: 50%;
   transform: translateX(-50%);
-  animation-name: slideIn;
+  animation-name: slideInTop;
   animation-duration: 500ms;
   animation-fill-mode: both;
-  -webkit-animation-name: slideIn;
+  -webkit-animation-name: slideInTop;
   -webkit-animation-fill-mode: both;
   -webkit-animation-duration: 500ms;
   border: 1px solid #5c81b8;
