--- a/src/components/modalAdd.scss
+++ b/src/components/modalAdd.scss
@@ -1,6 +1,6 @@
 .modal {
   position: fixed;
-  width: 700px;
+  width: min(700px,100%);
   height: 100%;
   z-index: 1;
   left: 50%;
@@ -77,6 +77,15 @@
 @keyframes fadeIn {
   from {opacity: 0}
   to {opacity: 1}
+}
+@-webkit-keyframes slideInTop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
+}
+
+@keyframes slideInTop {
+  from {top: -300px; opacity: 0}
+  to {top: 0; opacity: 1}
 }
 
 @media screen and (max-width: 700px) {
